# multi_tenant_saas_fastapi

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test.html
.github/workflows/: cd.yml  ci.yml
api/v1/: auth.py  health.py  organizations.py  projects.py  users.py
api/v1/schemas/: authorization_schemas.py  organization_schemas.py  projects_schema.py  user_schemas.py
api/v2/: health.py
api/v2/auth/: __init__.py  google_auth.py  login.py  logout.py  refresh_token.py  verify_email.py
api/v2/organizations/: __init__.py  add_user.py  delete.py  list_users.py  register.py  remove_member.py  select.py  update.py
api/v2/projects/: __init__.py  add_user.py  create.py  delete.py  list_members.py  list_projects.py  remove_user.py  update.py
api/v2/schemas/: authorization_schemas.py  organization_schemas.py  projects_schema.py  user_schemas.py
api/v2/users/: __init__.py  list_orgs.py  me.py  register.py  update_password.py
core/: config.py  google_callback_html.py  logger.py  logging_middleware.py  mail.py  oauth2.py  rate_limiter.py  utils.py
core/kafka/: kafka_producer.py  kafka_ssl_files_generator.py
core/redis/: redis_config.py  schemas.py
core/templates/: registration_verify.html
database/alembic/: env.py
database/alembic/versions/: 098e90f0e870_db_changes.py  0adfe0ba480b_added_auth_identities_table_for_oauth.py  37ce5bcc402c_.py  4ab173f88517_.py  5f3c0b005ccc_.py  629b7cac1920_added_jti_blocklist_table.py  837af02fa771_add_tables.py  acc5f9c0f8d2_added_server_default_for_uuid.py  aebf426c90d4_.py  af50e7ca8027_soft_delete.py  b4bfea01adfb_added_verified_status_column_to_users.py  b5c5cf72e793_.py  bd634bb7bee1_removed_password_hash_from_users.py  (+3 more)
database/db/: base.py  session.py
database/models/: __init__.py  audit_log.py  auth_identities.py  jti_blocklist.py  organization.py  organization_member.py  project_member.py  projects.py  users.py
database/schemas/: authorization_schemas.py  health_schemas.py  organization_schemas.py  user_schemas.py
db/: base.py
db/alembic/: env.py
db/models/: organization.py  organization_member.py  projects.py  users.py
k6/: README.md  k6_plotter.py
k6/k6_tests/: health-db-smoke.js  health-smoke.js  heavy-get-cache-load.js
tests/: conftest.py
tests/routers/: test_auth.py  test_healh.py  test_register.py  test_user_org_project.py
(+1 files in other folders)
