[project]
name = "python-api-project"
version = "0.1.0"
description = "Multi-Tenant SaaS Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.2",
    "asyncpg>=0.31.0",
    "authlib>=1.6.8",
    "bcrypt==3.2.2",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "fastapi-mail>=1.6.1",
    "google-auth>=2.48.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
