[project]
name = "python-api-project"
version = "0.1.0"
description = "Multi-Tenant SaaS Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiokafka>=0.13.0",
    "alembic>=1.18.2",
    "asyncpg>=0.31.0",
    "authlib>=1.6.8",
    "bcrypt==3.2.2",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "google-auth>=2.48.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "logtail-python>=0.3.4",
    "lz4>=4.4.5",
    "orjson>=3.11.7",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "python-snappy>=0.7.3",
    "redis>=7.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
